# blog_project

./: README.md  pyproject.toml  wsgi.py
blog/: admin.py  app.py  commands.py  configs.py
blog/articles/: models.py  views.py
blog/auth/: forms.py  views.py
blog/authors/: models.py  views.py
blog/static/css/: paginator.css  styles.css
blog/templates/: base.html  index.html
blog/templates/admin/: index.html
blog/templates/articles/: add_article.html  article_detail.html  articles.html
blog/templates/auth/: login.html  register.html
blog/templates/authors/: author_detail.html  authors.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: user_detail.html
blog/users/: models.py
